--- a/contact-success.html
+++ b/contact-success.html
@@ -19,47 +19,84 @@
       ga('send', 'pageview');
 
   </script>
-  <nav class="top-bar" data-topbar>
-      <ul class="title-area">
-          <li class="name">
-              <h1><a href="/"><img src="img/alltheduck.svg" style="height: 1.5em;width: auto;"> <b>All the Ducks</b></a></h1>
+  <div class="off-canvas-wrap">
+      <div class="inner-wrap">
+          <nav class="top-bar hide-for-small" data-topbar>
+              <ul class="title-area">
+                  <li class="name">
+                      <h1><a href="/"><img src="img/alltheduck.svg"
+                                           style="height: 1.5em;width: auto;"> <b>All
+                          the Ducks</b></a></h1>
 
-          </li>
-      </ul>
+                  </li>
+              </ul>
 
-      <section class="top-bar-section">
-          <!-- Right Nav Section -->
-          <ul class="right">
-              <!--<li class="has-dropdown">-->
-                  <!--<a href="#">Products</a>-->
-                  <!--<ul class="dropdown">-->
-                      <!--<li><a href="course-archiver.html">LMS Course Archiving</a></li>-->
-                  <!--</ul>-->
-              <!--</li>-->
-              <li>
-                  <a href="services.html">Services</a>
-              </li>
-              <li>
-                  <a href="about-us.html">About Us</a>
-              </li>
-              <li>
-                  <a href="contact-us.html">Contact Us</a>
-              </li>
-          </ul>
+              <section class="top-bar-section">
+                  <!-- Right Nav Section -->
+                  <ul class="right">
 
-          <!-- Left Nav Section -->
-          <ul class="left">
-              <!--<li><a href="#">Left Nav Button</a></li>-->
-          </ul>
-      </section>
-  </nav>
-    <div class="row">
-      <div class="large-12 columns">
-          <h2>Thanks for contacting us!</h2>
+                      <li>
+                          <a href="services.html">Services</a>
+                      </li>
+                      <li>
+                          <a href="about-us.html">About Us</a>
+                      </li>
+                      <li>
+                          <a href="contact-us.html">Contact Us</a>
+                      </li>
+                  </ul>
 
-          <p>We'll reply to you as soon as humanly possible. </p>
+                  <!-- Left Nav Section -->
+                  <ul class="left">
+                  </ul>
+              </section>
+          </nav>
+          <nav class="tab-bar show-for-small">
+              <section class="left-small">
+                  <a class="left-off-canvas-toggle menu-icon"><span></span></a>
+              </section>
+
+              <section class="middle name tab-bar-section">
+                  <h1><a href="/"><img src="img/alltheduck.svg"
+                                       style="height: 1.5em;width: auto;"><b>All
+                      the Ducks</b></a></h1>
+              </section>
+
+          </nav>
+          <aside class="left-off-canvas-menu">
+              <ul class="off-canvas-list">
+                  <li>
+                      <a href="/">Home</a>
+                  </li>
+                  <li>
+                      <a href="services.html">Services</a>
+                  </li>
+                  <li>
+                      <a href="about-us.html">About Us</a>
+                  </li>
+                  <li>
+                      <a href="contact-us.html">Contact Us</a>
+                  </li>
+              </ul>
+          </aside>
+
+
+
+          <div class="row">
+              <div class="large-12 columns">
+                  <h2>Thanks for contacting us!</h2>
+
+                  <p>We'll reply to you as soon as humanly possible. </p>
+              </div>
+          </div>
+
+
+
+
+          <a class="exit-off-canvas"></a>
+
       </div>
-    </div>
+  </div>
 
     
     <script src="js/vendor/jquery.js"></script>
