--- a/contact-us.html
+++ b/contact-us.html
@@ -20,84 +20,119 @@
     ga('send', 'pageview');
 
 </script>
-<nav class="top-bar" data-topbar>
-    <ul class="title-area">
-        <li class="name">
-            <h1><a href="/"><img src="img/alltheduck.svg"
-                                 style="height: 1.5em;width: auto;"> <b>All the
-                Ducks</b></a></h1>
+<div class="off-canvas-wrap">
+    <div class="inner-wrap">
+        <nav class="top-bar hide-for-small" data-topbar>
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="/"><img src="img/alltheduck.svg"
+                                         style="height: 1.5em;width: auto;"> <b>All
+                        the Ducks</b></a></h1>
 
-        </li>
-    </ul>
+                </li>
+            </ul>
 
-    <section class="top-bar-section">
-        <!-- Right Nav Section -->
-        <ul class="right">
-            <!--<li class="has-dropdown">-->
-            <!--<a href="#">Products</a>-->
-            <!--<ul class="dropdown">-->
-            <!--<li><a href="course-archiver.html">LMS Course Archiving</a></li>-->
-            <!--</ul>-->
-            <!--</li>-->
-            <li>
-                <a href="services.html">Services</a>
-            </li>
-            <li>
-                <a href="about-us.html">About Us</a>
-            </li>
-            <li>
-                <a href="contact-us.html">Contact Us</a>
-            </li>
-        </ul>
+            <section class="top-bar-section">
+                <!-- Right Nav Section -->
+                <ul class="right">
 
-        <!-- Left Nav Section -->
-        <ul class="left">
-            <!--<li><a href="#">Left Nav Button</a></li>-->
-        </ul>
-    </section>
-</nav>
-<div class="row">
-    <div class="large-12 columns">
-        <h2>Contact Us</h2>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="about-us.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="contact-us.html">Contact Us</a>
+                    </li>
+                </ul>
 
-    <div class="row">
-        <div class="large-12 columns">
-            <form action="contact.php" method="POST" id="contactform">
-                <div class="row">
-                    <div class="medium-8 large-6 columns">
-                        <label>Name
-                            <input name="name" type="text" placeholder="Mary Bloggs" />
-                        </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="medium-8 large-6 columns">
-                        <label>Email
-                            <input name="email" type="text" placeholder="mbloggs@university.edu.au" />
-                        </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="medium-8 large-6 columns">
-                        <label>Phone/Mobile/Cell Number
-                            <input name="phone" type="text" placeholder="0404 789 456" />
-                        </label>
-                    </div>
-                </div>
+                <!-- Left Nav Section -->
+                <ul class="left">
+                </ul>
+            </section>
+        </nav>
+        <nav class="tab-bar show-for-small">
+            <section class="left-small">
+                <a class="left-off-canvas-toggle menu-icon"><span></span></a>
+            </section>
 
+            <section class="middle name tab-bar-section">
+                <h1><a href="/"><img src="img/alltheduck.svg"
+                                     style="height: 1.5em;width: auto;"><b>All
+                    the Ducks</b></a></h1>
+            </section>
+
+        </nav>
+        <aside class="left-off-canvas-menu">
+            <ul class="off-canvas-list">
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+                <li>
+                    <a href="about-us.html">About Us</a>
+                </li>
+                <li>
+                    <a href="contact-us.html">Contact Us</a>
+                </li>
+            </ul>
+        </aside>
+
+
+
+
+        <div class="row">
+            <div class="large-12 columns">
+                <h2>Contact Us</h2>
 
                 <div class="row">
                     <div class="large-12 columns">
-                        <label>Your Question
-                            <textarea name="question" placeholder="What can you do for me?" style="height: 13em;"></textarea>
-                        </label>
+                        <form action="contact.php" method="POST" id="contactform">
+                            <div class="row">
+                                <div class="medium-8 large-6 columns">
+                                    <label>Name
+                                        <input name="name" type="text" placeholder="Mary Bloggs" />
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="medium-8 large-6 columns">
+                                    <label>Email
+                                        <input name="email" type="text" placeholder="mbloggs@university.edu.au" />
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="medium-8 large-6 columns">
+                                    <label>Phone/Mobile/Cell Number
+                                        <input name="phone" type="text" placeholder="0404 789 456" />
+                                    </label>
+                                </div>
+                            </div>
+
+
+                            <div class="row">
+                                <div class="large-12 columns">
+                                    <label>Your Question
+                                        <textarea name="question" placeholder="What can you do for me?" style="height: 13em;"></textarea>
+                                    </label>
+                                </div>
+                            </div>
+
+                            <a href="#" class="button radius" onclick="document.getElementById('contactform').submit();">Submit</a>
+                        </form>
                     </div>
                 </div>
-
-                <a href="#" class="button radius" onclick="document.getElementById('contactform').submit();">Submit</a>
-            </form>
+            </div>
         </div>
-    </div>
+
+
+
+        <a class="exit-off-canvas"></a>
+
     </div>
 </div>
 
