--- a/index.html
+++ b/index.html
@@ -1,104 +1,148 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>All the Ducks | Welcome</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-      <link rel="stylesheet" href="css/atd.css" />
+    <link rel="stylesheet" href="css/foundation.css"/>
+    <link rel="stylesheet" href="css/atd.css"/>
     <script src="js/vendor/modernizr.js"></script>
-  </head>
-  <body>
-  <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+</head>
+<body>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-      ga('create', 'UA-48874971-1', 'alltheducks.com');
-      ga('send', 'pageview');
+    ga('create', 'UA-48874971-1', 'alltheducks.com');
+    ga('send', 'pageview');
 
-  </script>
-  <nav class="top-bar" data-topbar>
-      <ul class="title-area">
-          <li class="name">
-              <h1><a href="/"><img src="img/alltheduck.svg" style="height: 1.5em;width: auto;"> <b>All the Ducks</b></a></h1>
+</script>
+<div class="off-canvas-wrap">
+    <div class="inner-wrap">
+        <nav class="top-bar hide-for-small" data-topbar>
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="/"><img src="img/alltheduck.svg"
+                                         style="height: 1.5em;width: auto;"> <b>All
+                        the Ducks</b></a></h1>
 
-          </li>
-      </ul>
+                </li>
+            </ul>
 
-      <section class="top-bar-section">
-          <!-- Right Nav Section -->
-          <ul class="right">
-              <!--<li class="has-dropdown">-->
-                  <!--<a href="#">Products</a>-->
-                  <!--<ul class="dropdown">-->
-                      <!--<li><a href="course-archiver.html">LMS Course Archiving</a></li>-->
-                  <!--</ul>-->
-              <!--</li>-->
-              <li>
-                  <a href="services.html">Services</a>
-              </li>
-              <li>
-                  <a href="about-us.html">About Us</a>
-              </li>
-              <li>
-                  <a href="contact-us.html">Contact Us</a>
-              </li>
-          </ul>
+            <section class="top-bar-section">
+                <!-- Right Nav Section -->
+                <ul class="right">
 
-          <!-- Left Nav Section -->
-          <ul class="left">
-              <!--<li><a href="#">Left Nav Button</a></li>-->
-          </ul>
-      </section>
-  </nav>
-  <section class="hp-banner">
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>All the Ducks</h1>
-        <h3>Ed-Tech Products and Services</h3>
-      </div>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="about-us.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="contact-us.html">Contact Us</a>
+                    </li>
+                </ul>
+
+                <!-- Left Nav Section -->
+                <ul class="left">
+                </ul>
+            </section>
+        </nav>
+        <nav class="tab-bar show-for-small">
+            <section class="left-small">
+                <a class="left-off-canvas-toggle menu-icon"><span></span></a>
+            </section>
+
+            <section class="middle name tab-bar-section">
+                <h1><a href="/"><img src="img/alltheduck.svg"
+                                     style="height: 1.5em;width: auto;"><b>All
+                    the Ducks</b></a></h1>
+            </section>
+
+        </nav>
+        <aside class="left-off-canvas-menu">
+            <ul class="off-canvas-list">
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+                <li>
+                    <a href="about-us.html">About Us</a>
+                </li>
+                <li>
+                    <a href="contact-us.html">Contact Us</a>
+                </li>
+            </ul>
+        </aside>
+
+
+        <section class="hp-banner">
+            <div class="row">
+                <div class="large-12 columns">
+                    <h1>All the Ducks</h1>
+
+                    <h3>Ed-Tech Products and Services</h3>
+                </div>
+            </div>
+            <div class="floatingduck">
+                <img src="img/alltheduck.svg">
+            </div>
+        </section>
+
+        <div class="row">
+            <div class="large-12 columns">
+                <div class="panel">
+                    <h3>Educational Technology Development Services</h3>
+
+                    <div class="row">
+                        <div class="large-4 medium-4 columns">
+                            <p><a href="services.html">Custom Blackboard
+                                Development</a><br/>Need a custom Building Block
+                                written for your institution? <a
+                                        href="contact-us.html">Talk to us.</a>
+                            </p>
+                        </div>
+                        <div class="large-4 medium-4 columns">
+                            <p><a href="services.html">OSS Maintenance and
+                                Support</a><br/>Development,
+                                Maintenance and Extension for Open Source LMS
+                                projects. <a href="services.html">What we can
+                                    offer.</a></p>
+                        </div>
+                        <div class="large-4 medium-4 columns">
+                            <p><a href="services.html">LMS Extension Development
+                                Training</a><br/>Need training in how to write
+                                Blackboard Building Blocks? <a
+                                        href="contact-us.html">Talk
+                                    to us.</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <a class="exit-off-canvas"></a>
+
     </div>
-    <div class="floatingduck">
-        <img src="img/alltheduck.svg">
-    </div>
-  </section>
-
-  <div class="row">
-      <div class="large-12 columns">
-          <div class="panel">
-              <h3>Educational Technology Development Services</h3>
-
-              <div class="row">
-                  <div class="large-4 medium-4 columns">
-                      <p><a href="services.html">Custom Blackboard
-                          Development</a><br/>Need a custom Building Block
-                          written for your institution? <a
-                                  href="contact-us.html">Talk to us.</a></p>
-                  </div>
-                  <div class="large-4 medium-4 columns">
-                      <p><a href="services.html">OSS Maintenance and Support</a><br/>Development,
-                          Maintenance and Extension for Open Source LMS
-                          projects. <a href="services.html">What we can
-                              offer.</a></p>
-                  </div>
-                  <div class="large-4 medium-4 columns">
-                      <p><a href="services.html">LMS Extension Development
-                          Training</a><br/>Need training in how to write
-                          Blackboard Building Blocks? <a href="contact-us.html">Talk
-                              to us.</a></p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+</div>
 
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+<script src="js/vendor/jquery.js"></script>
+<script src="js/foundation.min.js"></script>
+<script>
+    $(document).foundation();
+</script>
+</body>
 </html>
