--- a/services.html
+++ b/services.html
@@ -19,67 +19,104 @@
       ga('send', 'pageview');
 
   </script>
-  <nav class="top-bar" data-topbar>
-      <ul class="title-area">
-          <li class="name">
-              <h1><a href="/"><img src="img/alltheduck.svg" style="height: 1.5em;width: auto;"> <b>All the Ducks</b></a></h1>
+  <div class="off-canvas-wrap">
+      <div class="inner-wrap">
+          <nav class="top-bar hide-for-small" data-topbar>
+              <ul class="title-area">
+                  <li class="name">
+                      <h1><a href="/"><img src="img/alltheduck.svg"
+                                           style="height: 1.5em;width: auto;"> <b>All
+                          the Ducks</b></a></h1>
 
-          </li>
-      </ul>
+                  </li>
+              </ul>
 
-      <section class="top-bar-section">
-          <!-- Right Nav Section -->
-          <ul class="right">
-              <!--<li class="has-dropdown">-->
-                  <!--<a href="#">Products</a>-->
-                  <!--<ul class="dropdown">-->
-                      <!--<li><a href="course-archiver.html">LMS Course Archiving</a></li>-->
-                  <!--</ul>-->
-              <!--</li>-->
-              <li>
-                  <a href="services.html">Services</a>
-              </li>
-              <li>
-                  <a href="about-us.html">About Us</a>
-              </li>
-              <li>
-                  <a href="contact-us.html">Contact Us</a>
-              </li>
-          </ul>
+              <section class="top-bar-section">
+                  <!-- Right Nav Section -->
+                  <ul class="right">
 
-          <!-- Left Nav Section -->
-          <ul class="left">
-              <!--<li><a href="#">Left Nav Button</a></li>-->
-          </ul>
-      </section>
-  </nav>
-  <div class="row">
-      <div class="large-12 columns">
-          <h2>Professional Services</h2>
+                      <li>
+                          <a href="services.html">Services</a>
+                      </li>
+                      <li>
+                          <a href="about-us.html">About Us</a>
+                      </li>
+                      <li>
+                          <a href="contact-us.html">Contact Us</a>
+                      </li>
+                  </ul>
 
-          <p>All the Ducks offers a range of professional services to help you
-              meet your LMS usage and development goals. </p>
-          <div class="panel">
-          <h3>Blackboard Building Block Development</h3>
-              <p>If you have particular integration requirements, or need custom
-              functionality implemented as a Building Block, we can provide a cost effective
-              service to meet your needs.</p></div>
-          <div class="panel">
-          <h3>Support and Maintenance of open source Building Blocks and
-                  extensions.</h3>
-                  <p>Need an open source Building Block, but don't have the skills
-                  in-house to support it?.  We can provide either on-going support for these tools,
-                  or time-boxed support around your upgrade window.</p>
+                  <!-- Left Nav Section -->
+                  <ul class="left">
+                  </ul>
+              </section>
+          </nav>
+          <nav class="tab-bar show-for-small">
+              <section class="left-small">
+                  <a class="left-off-canvas-toggle menu-icon"><span></span></a>
+              </section>
+
+              <section class="middle name tab-bar-section">
+                  <h1><a href="/"><img src="img/alltheduck.svg"
+                                       style="height: 1.5em;width: auto;"><b>All
+                      the Ducks</b></a></h1>
+              </section>
+
+          </nav>
+          <aside class="left-off-canvas-menu">
+              <ul class="off-canvas-list">
+                  <li>
+                      <a href="/">Home</a>
+                  </li>
+                  <li>
+                      <a href="services.html">Services</a>
+                  </li>
+                  <li>
+                      <a href="about-us.html">About Us</a>
+                  </li>
+                  <li>
+                      <a href="contact-us.html">Contact Us</a>
+                  </li>
+              </ul>
+          </aside>
+
+
+
+          <div class="row">
+              <div class="large-12 columns">
+                  <h2>Professional Services</h2>
+
+                  <p>All the Ducks offers a range of professional services to help you
+                      meet your LMS usage and development goals. </p>
+                  <div class="panel">
+                      <h3>Blackboard Building Block Development</h3>
+                      <p>If you have particular integration requirements, or need custom
+                          functionality implemented as a Building Block, we can provide a cost effective
+                          service to meet your needs.</p></div>
+                  <div class="panel">
+                      <h3>Support and Maintenance of open source Building Blocks and
+                          extensions.</h3>
+                      <p>Need an open source Building Block, but don't have the skills
+                          in-house to support it?.  We can provide either on-going support for these tools,
+                          or time-boxed support around your upgrade window.</p>
+                  </div>
+                  <div class="panel">
+                      <h3>Technical Training and mentoring for Blackboard development.</h3>
+                      <p>Want to start writing Building Blocks, but don't know where to start?
+                          We can provide one-off training for your developers, or an ongoing
+                          support service for your technical staff.</p>
+                  </div>
+                  <p><a href="contact-us.html" class="button radius">contact us</a></li>
+              </div>
           </div>
-          <div class="panel">
-          <h3>Technical Training and mentoring for Blackboard development.</h3>
-              <p>Want to start writing Building Blocks, but don't know where to start?
-              We can provide one-off training for your developers, or an ongoing
-              support service for your technical staff.</p>
-            </div>
-          <p><a href="contact-us.html" class="button radius">contact us</a></li>
+
+
+
+          <a class="exit-off-canvas"></a>
+
       </div>
   </div>
+
 
 
     <script src="js/vendor/jquery.js"></script>
